--- a/src/components/RegisterForm/RegisterForm.sass
+++ b/src/components/RegisterForm/RegisterForm.sass
@@ -1,38 +1,59 @@
-@import '../../utilities/sizes'
-@import '../../utilities/palette.sass'
 @import '../../utilities/placeholders.sass'
-
-.RegisterForm
-  div
-    @extend %message
-    text-align: center
-    position: absolute
-    left: 29%
-    top: 10%
-    width: 200px
-    height: 100px
-    border-radius: 40px
-    background-color: $navi-dark
-    color: $white
-  .appear
-    animation: pop-up .7s
-  .hidden
-    opacity: 0
-    transform: scale(0)
+@import '../../utilities/palette.sass'
 
 
-@keyframes pop-up
-  0%
-    transform: scale(0)
-    opacity: 0
-  30%
-    opacity: 1
-  68%
-    transform: scale(1.2)
-    opacity: 1
-  90%
-    transform: scale(.9)
-    opacity: 1
-  100%
-    transform: scale(1)
-    opacity: 1
+.main-view
+  .RegisterForm
+    form
+      animation: appear 1.5s
+      margin: 100px auto 0 auto
+      color: $white
+      font-size: 1.5em
+      width: 100%
+      text-align: center
+      transition: .3s
+      width: 500px
+      background-color: $setting-light
+      padding: 30px 0
+      @media screen and (max-width: 700px)
+        width: 300px
+      border-radius: 4px
+      box-shadow: 0px 8px 5px rgba(0,0,0,0.12), 0 2px 3px rgba(0,0,0,0.34)
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1)
+      input
+        display: block
+        margin: 15px auto
+        width: 80%
+        font-size: 1em
+        background-color: rgba(0,0,0,0)
+        border: none
+        border-bottom: 2px solid $grey
+        color: $white
+        &:focus
+          outline: none
+    button
+      display: block
+      border: none
+      animation: appear 1.5s
+      margin: 20px auto 0 auto
+      color: $white
+      transform: translateX(120px)
+      font-size: 1.5em
+      text-align: center
+      transition: .3s
+      width: 140px
+      background-color: $balloon-red
+      padding: 10px 0
+      &:hover
+        cursor: pointer
+      @media screen and (max-width: 700px)
+        width: 300px
+      border-radius: 4px
+      box-shadow: 0px 8px 5px rgba(0,0,0,0.12), 0 2px 3px rgba(0,0,0,0.34)
+      transition: all 0.3s cubic-bezier(.25,.8,.25,1)
+
+@keyframes appear
+0%
+  opacity: 0
+100%
+  opacity: 1
