--- a/src/components/ViewButton/ViewButton.css
+++ b/src/components/ViewButton/ViewButton.css
@@ -10,13 +10,15 @@
   border-radius: 16px;
   font-size: .75em;
   transition: .3s; }
+  .main-view .menu .ViewButton:focus {
+    outline: none; }
   .main-view .menu .ViewButton:hover {
     cursor: pointer; }
 
 .main-view .menu .trigger-menu {
   width: 20px; }
-  .main-view .menu .trigger-menu:focus {
-    outline: none; }
+  .main-view .menu .trigger-menu:active {
+    transform: scale(0.9); }
 
 .main-view .menu .on:after {
   content: "";
@@ -38,8 +40,12 @@
   padding: 3px;
   transform: translateX(-2px) rotate(-45deg); }
 
-.main-view .menu .register {
+.main-view .menu .register, .main-view .menu .main {
   transform: translateY(30px); }
+  .main-view .menu .register:active, .main-view .menu .main:active {
+    transform: translateY(30px) scale(0.9); }
 
 .main-view .menu .login {
   transform: translateY(60px); }
+  .main-view .menu .login:active {
+    transform: translateY(60px) scale(0.9); }
