--- a/src/components/ViewButton/ViewButton.sass
+++ b/src/components/ViewButton/ViewButton.sass
@@ -17,12 +17,14 @@ $active-offset: 20px
       border-radius: 16px
       font-size: .75em
       transition: .3s
+      &:focus
+        outline: none
       &:hover
         cursor: pointer
     .trigger-menu
       width: 20px
-      &:focus
-        outline: none
+      &:active
+        transform: scale(0.9)
     .on
       &:after
         content: ""
@@ -44,7 +46,11 @@ $active-offset: 20px
         padding: 3px
         transform: translateX(-2px) rotate(-45deg)
 
-    .register
+    .register, .main
       transform: translateY(30px)
+      &:active
+        transform: translateY(30px) scale(0.9)
     .login
       transform: translateY(60px)
+      &:active
+        transform: translateY(60px) scale(0.9)
