--- a/src/components/RegisterForm/RegisterForm.sass
+++ b/src/components/RegisterForm/RegisterForm.sass
@@ -42,7 +42,8 @@
       text-align: center
       transition: .3s
       width: 140px
-      background-color: $balloon-red
+      background-color: $balloon-yellow
+      color: $black
       padding: 10px 0
       &:hover
         cursor: pointer
