--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -46,7 +46,8 @@ body {
   text-align: center;
   transition: .3s;
   width: 140px;
-  background-color: #e01f4f;
+  background-color: #efe447;
+  color: #010101;
   padding: 10px 0;
   border-radius: 4px;
   box-shadow: 0px 8px 5px rgba(0, 0, 0, 0.12), 0 2px 3px rgba(0, 0, 0, 0.34);
