--- a/src/components/Navi/Navi.sass
+++ b/src/components/Navi/Navi.sass
@@ -12,6 +12,7 @@ $navi-size: 40px
     left: calc(50vw - 120px)
 .main-view
   .Navi
+    animation: fade .7s
     position: relative
     background-color: red
     .navi-outer
@@ -188,3 +189,10 @@ $navi-size: 40px
   to
     left: 20%
     top: 25%
+
+
+@keyframes fade
+  0%
+    opacity: 0
+  100%
+    opacity: 1
