--- a/src/components/LoginForm/LoginForm.sass
+++ b/src/components/LoginForm/LoginForm.sass
@@ -4,6 +4,7 @@
 
 .main-view
   .LoginForm
+    animation: fade .7s
     form
       animation: appear 1.5s
       margin: 100px auto 0 auto
@@ -57,8 +58,8 @@
       box-shadow: 0px 8px 5px rgba(0,0,0,0.12), 0 2px 3px rgba(0,0,0,0.34)
       transition: all 0.3s cubic-bezier(.25,.8,.25,1)
 
-@keyframes appear
-0%
-  opacity: 0
-100%
-  opacity: 1
+@keyframes fade
+  0%
+    opacity: 0
+  100%
+    opacity: 1
