--- a/src/components/ViewButton/ViewButton.css
+++ b/src/components/ViewButton/ViewButton.css
@@ -1,4 +1,5 @@
 .main-view .menu .ViewButton {
+  animation: fade .7s;
   position: fixed;
   top: 10px;
   left: 10px;
@@ -60,3 +61,9 @@
 
 .main-view .menu .login:active, .main-view .menu .logout:active {
   transform: translateY(60px) scale(0.9); }
+
+@keyframes fade {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
