--- a/src/components/ViewButton/ViewButton.sass
+++ b/src/components/ViewButton/ViewButton.sass
@@ -6,6 +6,7 @@ $active-offset: 20px
 .main-view
   .menu
     .ViewButton
+      animation: fade .7s
       position: fixed
       top: 10px
       left: 10px
@@ -58,3 +59,9 @@ $active-offset: 20px
       transform: translateY(60px)
       &:active
         transform: translateY(60px) scale(0.9)
+
+@keyframes fade
+  0%
+    opacity: 0
+  100%
+    opacity: 1
