--- a/src/components/PlaceInfo/PlaceInfo.sass
+++ b/src/components/PlaceInfo/PlaceInfo.sass
@@ -4,6 +4,7 @@
 
 .main-view
   .PlaceInfo
+    animation: fade .7s
     .place
       animation: appear 1.5s
       margin: 0 auto
@@ -41,6 +42,12 @@
         overflow: hidden
 
 @keyframes appear
+  0%
+    opacity: 0
+  100%
+    opacity: 1
+
+@keyframes fade
   0%
     opacity: 0
   100%
