--- a/src/components/SpeechBalloon/SpeechBalloon.css
+++ b/src/components/SpeechBalloon/SpeechBalloon.css
@@ -41,6 +41,12 @@ body {
   opacity: 0;
   transform: scale(0); }
 
+.SpeechBalloon .swap-a {
+  animation: swap-a .7s; }
+
+.SpeechBalloon .swap-b {
+  animation: swap-b .7s; }
+
 @keyframes pop-up {
   0% {
     transform: scale(0);
@@ -53,6 +59,22 @@ body {
   90% {
     transform: scale(0.9);
     opacity: 1; }
+  100% {
+    transform: scale(1);
+    opacity: 1; } }
+
+@keyframes swap-a {
+  50% {
+    opacity: 0.5;
+    transform: scale(0.9); }
+  100% {
+    transform: scale(1);
+    opacity: 1; } }
+
+@keyframes swap-b {
+  50% {
+    opacity: 0.5;
+    transform: scale(0.9); }
   100% {
     transform: scale(1);
     opacity: 1; } }
