--- a/src/components/Navi/Navi.sass
+++ b/src/components/Navi/Navi.sass
@@ -72,10 +72,11 @@ $navi-size: 40px
   .loading
     .navi-outer
       transform-origin: 0% 0%
-      animation: loader-outer .5s infinite
+      animation: loader-outer 1s infinite cubic-bezier(.15,1,.74,.11)
+      animation-delay: .2s
     .navi-inner
       transform-origin: 0% 0%
-      animation: loader-inner 1s infinite
+      animation: loader-inner 1s infinite cubic-bezier(.15,1,.74,.11)
   .recording
     .navi-outer
       transition: .3s
@@ -91,15 +92,15 @@ $navi-size: 40px
 
 @keyframes loader-inner
   0%
-    transform: rotate(0deg)
+    transform: scale(0.4) rotate(0deg)
   100%
-    transform: rotate(360deg)
+    transform: scale(0.4) rotate(360deg)
 
 @keyframes loader-outer
   0%
-    transform: rotate(0deg)
+    transform: scale(0.4) rotate(0deg)
   100%
-    transform: rotate(360deg)
+    transform: scale(0.4) rotate(360deg)
 
 //definicja animacji na podstawie konkretnych stanów w określonych punktach w czasie
 @keyframes glowing-body
