--- a/src/components/Navi/Navi.css
+++ b/src/components/Navi/Navi.css
@@ -68,6 +68,12 @@
 .main-view .idle .navi-inner {
   animation: glowing-body 1.5s infinite; }
 
+.main-view .login .navi-outer {
+  animation: swing-outer 8s infinite cubic-bezier(0.75, 0.2, 0.87, 1); }
+
+.main-view .login .navi-inner {
+  animation: swing-inner 4s infinite ease-out; }
+
 .main-view .loading .navi-outer {
   transform-origin: 0% 0%;
   animation: loader-outer 1s infinite cubic-bezier(0.15, 1, 0.74, 0.11);
@@ -87,6 +93,34 @@
   transition: .3s;
   background-color: #e01f4f;
   animation: recording-inner 1.2s infinite; }
+
+@keyframes swing-inner {
+  0% {
+    transform: translate(-50%, -50%) translate(40px, 0); }
+  50% {
+    transform: translate(-50%, -50%) translate(-40px, 0); }
+  100% {
+    transform: translate(-50%, -50%) translate(40px, 0); } }
+
+@keyframes swing-outer {
+  0% {
+    transform: translate(-50%, -50%) translate(60px, 0) scale(1); }
+  12.5% {
+    transform: translate(-50%, -50%) translate(0, 0) scale(0.5); }
+  25% {
+    transform: translate(-50%, -50%) translate(-60px, 0) scale(1); }
+  37.5% {
+    transform: translate(-50%, -50%) translate(0, 0) scale(0.5); }
+  50% {
+    transform: translate(-50%, -50%) translate(60px, 0) scale(1); }
+  62.5% {
+    transform: translate(-50%, -50%) translate(0, 0) scale(0.5); }
+  75% {
+    transform: translate(-50%, -50%) translate(-60px, 0) scale(1); }
+  87.5% {
+    transform: translate(-50%, -50%) translate(0, 0) scale(0.5); }
+  100% {
+    transform: translate(-50%, -50%) translate(60px, 0) scale(1); } }
 
 @keyframes loader-inner {
   0% {
