--- a/src/components/Navi/Navi.sass
+++ b/src/components/Navi/Navi.sass
@@ -71,9 +71,11 @@ $navi-size: 40px
 
   .login
     .navi-outer
-      animation: swing-outer 8s infinite cubic-bezier(.75,.2,.87,1)
+      left: 50%
+      animation: swing-outer 2s infinite cubic-bezier(.75,.2,.87,1)
     .navi-inner
-      animation: swing-inner 4s infinite ease-out
+      left: 50%
+      animation: swing-inner 2s infinite ease-out
   //animacja loader jest załączana, kiedy użytkownik czeka na odpowiedź
   .loading
     .navi-outer
@@ -108,20 +110,8 @@ $swing-distance: 40px
 @keyframes swing-outer
   0%
     transform: translate(-50%, -50%) translate($swing-distance*1.5, 0) scale(1)
-  12.5%
-    transform: translate(-50%, -50%) translate(0, 0) scale(.5)
-  25%
-    transform: translate(-50%, -50%) translate(-$swing-distance*1.5, 0) scale(1)
-  37.5%
-    transform: translate(-50%, -50%) translate(0, 0) scale(.5)
   50%
-    transform: translate(-50%, -50%) translate($swing-distance*1.5, 0) scale(1)
-  62.5%
-    transform: translate(-50%, -50%) translate(0, 0) scale(.5)
-  75%
-    transform: translate(-50%, -50%) translate(-$swing-distance*1.5, 0) scale(1)
-  87.5%
-    transform: translate(-50%, -50%) translate(0, 0) scale(.5)
+    transform: translate(-50%, -50%) translate(-$swing-distance*1.5, 0) scale(.5)
   100%
     transform: translate(-50%, -50%) translate($swing-distance*1.5, 0) scale(1)
 
