--- a/src/components/RegisterForm/RegisterForm.sass
+++ b/src/components/RegisterForm/RegisterForm.sass
@@ -57,9 +57,21 @@
       border-radius: 4px
       box-shadow: 0px 8px 5px rgba(0,0,0,0.12), 0 2px 3px rgba(0,0,0,0.34)
       transition: all 0.3s cubic-bezier(.25,.8,.25,1)
+  .wrong
+    form
+      input
+        animation: wrong .2s
 
 @keyframes fade
   0%
     opacity: 0
   100%
     opacity: 1
+
+@keyframes wrong
+  0%
+    transform: translateX(-5px)
+  50%
+    transform: translateX(5px)
+  100%
+    transform: translateX(-5px)
