--- a/src/components/Navi/Navi.css
+++ b/src/components/Navi/Navi.css
@@ -78,7 +78,7 @@
 
 .main-view .loading .navi-outer {
   transform-origin: 0% 0%;
-  animation: loader-outer 1s infinite cubic-bezier(0.15, 1, 0.74, 0.11);
+  animation: loader-outer .6s infinite linear;
   animation-delay: .2s; }
 
 .main-view .loading .navi-inner {
@@ -112,17 +112,27 @@
   100% {
     transform: translate(-50%, -50%) translate(60px, 0) scale(1); } }
 
-@keyframes loader-inner {
+@keyframes bounce-inner {
   0% {
-    transform: scale(0.4) rotate(0deg); }
+    transform: translateY(0px) scaleX(1); }
+  60% {
+    transform: translateY(60px) scaleX(0.9); }
+  80% {
+    transform: translateY(70px) scaleY(0.4) scaleX(1.4); }
   100% {
-    transform: scale(0.4) rotate(360deg); } }
+    transform: translateY(0px); } }
 
 @keyframes loader-outer {
   0% {
     transform: scale(0.4) rotate(0deg); }
   100% {
     transform: scale(0.4) rotate(360deg); } }
+
+@keyframes loader-inner {
+  0% {
+    transform: scale(0.6) rotate(0deg); }
+  100% {
+    transform: scale(0.6) rotate(360deg); } }
 
 @keyframes glowing-body {
   0% {
