--- a/src/components/Navi/Navi.css
+++ b/src/components/Navi/Navi.css
@@ -35,10 +35,10 @@
   transform: scale(0.8) !important; }
 
 .main-view .dialogue .navi-outer {
-  animation: emitting-power 4s infinite; }
+  animation: dialogue-outer 4s infinite; }
 
 .main-view .dialogue .navi-inner {
-  animation: glowing-body 1.5s infinite; }
+  animation: dialogue-inner 1.5s infinite; }
 
 .main-view .starting .navi-outer {
   top: -120px;
@@ -63,10 +63,10 @@
   transform: translate(-50%, -50%); }
 
 .main-view .idle .navi-outer {
-  animation: emitting-power 4s infinite; }
+  animation: emitting-power 4s infinite 3s; }
 
 .main-view .idle .navi-inner {
-  animation: glowing-body 1.5s infinite; }
+  animation: glowing-body 2s infinite; }
 
 .main-view .login .navi-outer {
   left: 50%;
@@ -141,6 +141,27 @@
     transform: translate(-50%, -50%) scale(1.1); }
   100% {
     transform: translate(-50%, -50%) scale(1); } }
+
+@keyframes dialogue-outer {
+  0% {
+    transform: translate(-50%, -50%) scale(0.1, 0); }
+  30% {
+    transform: translate(-50%, -50%) scale(0.1, 2); }
+  40% {
+    transform: translate(-50%, -50%) scale(0.1, 2); }
+  60% {
+    transform: translate(-50%, -50%) scale(0.1, 2) rotate(360deg); }
+  100% {
+    transform: translate(-50%, -50%) scale(2);
+    opacity: 0; } }
+
+@keyframes dialogue-inner {
+  0% {
+    transform: translate(-50%, -50%) scale(0.8, 1.1); }
+  50% {
+    transform: translate(-50%, -50%) scale(1.2, 0.7); }
+  100% {
+    transform: translate(-50%, -50%) scale(0.8, 1.1); } }
 
 @keyframes starting-inner {
   0% {
