--- a/src/components/Navi/Navi.sass
+++ b/src/components/Navi/Navi.sass
@@ -38,9 +38,9 @@ $navi-size: 40px
         transform: scale(0.8) !important
   .dialogue
     .navi-outer
-      animation: emitting-power 4s infinite
+      animation: dialogue-outer 4s infinite
     .navi-inner
-      animation: glowing-body 1.5s infinite
+      animation: dialogue-inner 1.5s infinite
   .starting
     .navi-outer
       top: -120px
@@ -65,9 +65,9 @@ $navi-size: 40px
   //idle jest to domyślna animacja
   .idle
     .navi-outer
-      animation: emitting-power 4s infinite
+      animation: emitting-power 4s infinite 3s
     .navi-inner
-      animation: glowing-body 1.5s infinite
+      animation: glowing-body 2s infinite
 
   .login
     .navi-outer
@@ -146,6 +146,27 @@ $swing-distance: 40px
     transform: translate(-50%, -50%) scale(1.1)
   100%
     transform: translate(-50%, -50%) scale(1)
+
+@keyframes dialogue-outer
+  0%
+    transform: translate(-50%, -50%) scale(0.1, 0)
+  30%
+    transform: translate(-50%, -50%) scale(0.1, 2)
+  40%
+    transform: translate(-50%, -50%) scale(0.1, 2)
+  60%
+    transform: translate(-50%, -50%) scale(0.1, 2) rotate(360deg)
+  100%
+    transform: translate(-50%, -50%) scale(2)
+    opacity: 0
+
+@keyframes dialogue-inner
+  0%
+    transform: translate(-50%, -50%) scale(0.8, 1.1)
+  50%
+    transform: translate(-50%, -50%) scale(1.2, 0.7)
+  100%
+    transform: translate(-50%, -50%) scale(0.8, 1.1)
 
 //definicja animacji na podstawie konkretnych stanów w określonych punktach w czasie
 @keyframes starting-inner
