--- a/src/components/Navi/Navi.sass
+++ b/src/components/Navi/Navi.sass
@@ -38,9 +38,9 @@ $navi-size: 40px
         transform: scale(0.8) !important
   .dialogue
     .navi-outer
-      animation: dialogue-outer 4s infinite
+      animation: emitting-power 4s infinite 3s
     .navi-inner
-      animation: dialogue-inner 1.5s infinite
+      animation: glowing-body 2s infinite
   .starting
     .navi-outer
       top: -120px
