--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -66,7 +66,13 @@ body {
 
 @media screen and (max-width: 700px) {
   .main-view .LoginForm button {
-    width: 300px; } }
+    width: 300px;
+    margin: 20px auto;
+    transform: translate(0, 0); }
+  .main-view .LoginForm button:hover {
+    cursor: pointer;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    transform: translate(0px, -2px); } }
 
 @keyframes fade {
   0% {
