--- a/src/components/LoginForm/LoginForm.sass
+++ b/src/components/LoginForm/LoginForm.sass
@@ -54,6 +54,12 @@
         outline: none
       @media screen and (max-width: 700px)
         width: 300px
+        margin: 20px auto
+        transform: translate(0,0)
+        &:hover
+          cursor: pointer
+          box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22)
+          transform: translate(0px, -2px)
       border-radius: 4px
       box-shadow: 0px 8px 5px rgba(0,0,0,0.12), 0 2px 3px rgba(0,0,0,0.34)
       transition: all 0.3s cubic-bezier(.25,.8,.25,1)
