--- a/src/components/RegisterForm/RegisterForm.css
+++ b/src/components/RegisterForm/RegisterForm.css
@@ -65,7 +65,13 @@ body {
 
 @media screen and (max-width: 700px) {
   .main-view .RegisterForm button {
-    width: 300px; } }
+    width: 300px;
+    margin: 20px auto;
+    transform: translate(0, 0); }
+  .main-view .RegisterForm button:hover {
+    cursor: pointer;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+    transform: translate(0px, -2px); } }
 
 .main-view .wrong form input {
   animation: wrong .2s; }
