animation after query fix

--- a/src/components/Navi/Navi.css
+++ b/src/components/Navi/Navi.css
@@ -35,10 +35,10 @@
   transform: scale(0.8) !important; }
 
 .main-view .dialogue .navi-outer {
-  animation: emitting-power 4s infinite 3s; }
+  animation: emitting-power 4s infinite; }
 
 .main-view .dialogue .navi-inner {
-  animation: glowing-body 2s infinite; }
+  animation: glowing-body 1.5s infinite; }
 
 .main-view .starting .navi-outer {
   top: -120px;
@@ -63,10 +63,10 @@
   transform: translate(-50%, -50%); }
 
 .main-view .idle .navi-outer {
-  animation: emitting-power 4s infinite 3s; }
+  animation: emitting-power 4s infinite; }
 
 .main-view .idle .navi-inner {
-  animation: glowing-body 2s infinite; }
+  animation: glowing-body 1.5s infinite; }
 
 .main-view .login .navi-outer {
   left: 50%;
@@ -78,7 +78,7 @@
 
 .main-view .loading .navi-outer {
   transform-origin: 0% 0%;
-  animation: loader-outer .6s infinite linear;
+  animation: loader-outer 1s infinite cubic-bezier(0.15, 1, 0.74, 0.11);
   animation-delay: .2s; }
 
 .main-view .loading .navi-inner {
@@ -112,27 +112,17 @@
   100% {
     transform: translate(-50%, -50%) translate(60px, 0) scale(1); } }
 
-@keyframes bounce-inner {
+@keyframes loader-inner {
   0% {
-    transform: translateY(0px) scaleX(1); }
-  60% {
-    transform: translateY(60px) scaleX(0.9); }
-  80% {
-    transform: translateY(70px) scaleY(0.4) scaleX(1.4); }
+    transform: scale(0.4) rotate(0deg); }
   100% {
-    transform: translateY(0px); } }
+    transform: scale(0.4) rotate(360deg); } }
 
 @keyframes loader-outer {
   0% {
     transform: scale(0.4) rotate(0deg); }
   100% {
     transform: scale(0.4) rotate(360deg); } }
-
-@keyframes loader-inner {
-  0% {
-    transform: scale(0.6) rotate(0deg); }
-  100% {
-    transform: scale(0.6) rotate(360deg); } }
 
 @keyframes glowing-body {
   0% {
@@ -141,27 +131,6 @@
     transform: translate(-50%, -50%) scale(1.1); }
   100% {
     transform: translate(-50%, -50%) scale(1); } }
-
-@keyframes dialogue-outer {
-  0% {
-    transform: translate(-50%, -50%) scale(0.1, 0); }
-  30% {
-    transform: translate(-50%, -50%) scale(0.1, 2); }
-  40% {
-    transform: translate(-50%, -50%) scale(0.1, 2); }
-  60% {
-    transform: translate(-50%, -50%) scale(0.1, 2) rotate(360deg); }
-  100% {
-    transform: translate(-50%, -50%) scale(2);
-    opacity: 0; } }
-
-@keyframes dialogue-inner {
-  0% {
-    transform: translate(-50%, -50%) scale(0.8, 1.1); }
-  50% {
-    transform: translate(-50%, -50%) scale(1.2, 0.7); }
-  100% {
-    transform: translate(-50%, -50%) scale(0.8, 1.1); } }
 
 @keyframes starting-inner {
   0% {
