--- a/src/components/AlertBalloon/AlertBalloon.sass
+++ b/src/components/AlertBalloon/AlertBalloon.sass
@@ -3,7 +3,7 @@
 
 .AlertBalloon
   .balloon-wrapper
-    animation: alert 3s
+    animation: alert 2.8s forwards
     color: $white
     font-size: 1.5em
     text-align: center
